@@ -1,0 +1,35 @@
+# This file contains the set of languages currently supported/tested
+# Different projects can use just a subset of these (see
+# cfg/manual_d-i/lang2dict.txt for an example)
+# 
+# {LANG,ASPELL-SUFFIX}
+bg,bg
+ca,ca
+cs,cs
+cy,cy
+da,da
+de,de
+el,el
+en,en
+es,es
+fr,fr
+ga,ga
+gl,gl
+hr,hr
+id,id
+it,it
+mg,mg
+mk,mk
+nl,nl
+nb,nb
+nn,nn
+pl,pl
+pt,pt
+pt_BR,pt-br
+ro,ro
+ru,ru
+sk,sk
+sl,sl
+sv,sv
+tl,tl
+uk,ukr
